--- a/glide.yaml
+++ b/glide.yaml
@@ -3,3 +3,4 @@ import:
 - package: github.com/bwmarrin/snowflake
 - package: github.com/mediocregopher/radix.v2
 - package: github.com/sirupsen/logrus
+- package: github.com/jinzhu/gorm
