--- a/glide.yaml
+++ b/glide.yaml
@@ -4,3 +4,6 @@ import:
 - package: github.com/mediocregopher/radix.v2
 - package: github.com/sirupsen/logrus
 - package: github.com/jinzhu/gorm
+- package: github.com/go-sql-driver/mysql
+  version: ^1.3.0
+- package: github.com/jinzhu/inflection
